@@ -1,3 +1,8 @@
+2010-02-16  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclInt.h:  Change order of various struct members,
+	     restoring potential binary incompatibility with Tcl 8.5
+
 2010-02-16  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/configure.in, generic/tclIOUtil.c (Tcl_Stat): Updated so that
